# cpu_math_kernels_pri

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  a.out  benchmark.h  generate_vs_solution.ps1  run_transpose_bench.sh  test_myddot.cpp
.github/: ACTIONS_README.md  copilot-instructions.md
.github/workflows/: benchmark.yml  benchmark_gemm.yml  build.yml
.jules/: thunderbolt.md
dgetrf/: .gitignore  CMakeLists.txt  backup.c  bench.c  bench.sh  bench2.sh  bench_all.cpp  benchg.sh  func_call.c  include.h  lapack.c  m  main.c  main.cpp  matrix1.txt  matrix2.txt  my.c  my_block.c  test1.c  test2  test_swapRow.c
dgetrf/include/dgetrf/: common.h
gemm/: BENCHMARK_README.md  CMakeLists.txt  bench.cpp  bench1.py  bench2.py  bench33.csv  bench6.py  bench6.txt  bench62.py  benchQ6.csv  bench_all.cpp  common.h  compiler_compat.h  dgemm.c  dgemm.cpp  dgemm.h  dgemm1.c  dgemm2.c  dgemm3.c  dgemm3_v51.c  dgemm3v3.c  dgemm6_ijk.c  dgemm6_ijkv1.c  dgemm6_ikjv1.c  dgemm6_ikjv2.c  dgemm6_jik.c  dgemm6_kij.c  dgemm6_kji.c  dgemm7-ijk4x4.c  dgemm7.c  dgemm7_ijk_3x3.c  dgemm7_ijk_ijk_8reg.c  dgemm7_ikj.c  dgemm7_ikj_v2.c  dgemm7olds.c  dgemm7olds.h  dgemm7v2.c  dgemm7v2.cpp  environment.yml  include.c  (+16 more)
hw1/: .gitignore  CMakeLists.txt  bench.cpp  bench1.csv  bench1.py  bench2.csv  bench3.py  bench31.csv  bench32.csv  bench34.csv  bench6.py  dgemm.c  dgemm0.c  dgemm1.c  dgemm2.c  dgemm3.c  dgemm3_v52.c  dgemm3v1.c  dgemm3v4.c  dgemm3v4c  dgemm6_ijk.c  dgemm6_ijkv2.c  dgemm6_ikj.c  dgemm6_jik.c  dgemm6_jki.c  dgemm6_kij.c  dgemm6_kijv1.c  dgemm6_kijv2.c  dgemm6_kji.c  dgemm7.c  dgemm7_ikj.c  func_call.c  hw1.ipynb  include.c  main.c  makefile  name_check.c  sample.csv  starter.py  tester.c
hw2/: CMakeLists.txt  bench  bench.sh  hw2.ipynb  include.h  lapack.c  main.c  makefile  my.c  my_block.c  run.sh  starter.py  test1.c  testQ2  testQ4
hw3/: CMakeLists.txt  func_call.c  main.c  makefile  sieve0.c  sieve1.c  sieve2.c  sieve2.cpp  sieve3.c  sieve3.cpp  starter.py
include/: aligned_buffer.h  benchmark.h
ml_kernels/: CMakeLists.txt  README.md
ml_kernels/attention/: README.md
ml_kernels/conv/: README.md
ml_kernels/include/ml_kernels/: kernel_common.h  max.h  naive_ops.h  relu.h  softmax.h
ml_kernels/src/: kernel_bench.cpp  kernel_smoke.cpp  kernel_test.cpp  naive_ops.cpp  test_naive_ops.cpp
mpi_prime/: CMakeLists.txt  bench.py  func_call.c  func_call.h  include.h  makefile  sieve1.c  sieve2.cpp  sieve3.cpp  starter.py
mpi_prime/sh/: test.sh
